--- a/Affect-Emotion/Packages/manifest.json
+++ b/Affect-Emotion/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.barracuda": "https://github.com/Unity-Technologies/barracuda-release.git",
+    "com.unity.burst": "1.6.1",
     "com.unity.collab-proxy": "1.7.1",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
